<resources>
    <string name="app_name">To-Do-List</string>
    <string name="my_to_do_list">My To-Do-List</string>
    <string name="name">Name:</string>
    <string name="message">Message:</string>
    <string name="date">Date:</string>
    <string name="eg_submit_assignment">Eg: Submit Assignment</string>
    <string name="eg_submit_on_ulearn_and_hardcopy">Eg: Submit on ulearn and hardcopy</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="high_priority" />
    <string name="med_priority" />
    <string name="low_priority" />
</resources>
